@@ -25,6 +25,7 @@ import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.List;
 import java.util.logging.Logger;
@@ -473,10 +474,10 @@ public class WSDLServiceBuilderTest {
         }
         String filePath = this.getClass().getResource("./s1/s2/s4/schema4.xsd").toURI().getPath();
         String importPath = schemaImport.getAttributeNode("schemaLocation").getValue();
-        if (!new URI(URLEncoder.encode(importPath, "utf-8")).isAbsolute()) {
+        if (!new URI(URLEncoder.encode(importPath, StandardCharsets.UTF_8)).isAbsolute()) {
             schemaImport.getAttributeNode("schemaLocation").setNodeValue("file:" + filePath);
             String fileStr = this.getClass().getResource("./s1/s2/schema2.xsd").toURI().getPath();
-            fileStr = URLDecoder.decode(fileStr, "utf-8");
+            fileStr = URLDecoder.decode(fileStr, StandardCharsets.UTF_8);
             File file = new File(fileStr);
             if (file.exists()) {
                 file.delete();
